updated post action

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,7 @@
                             <br> GENEVA CENTRE FOR AUTISM, SUPPORTING THE INCLUSION OF <br> ALL INDIVIDUALS WITH ASD IN
                             OUR COMMUNITIES.
                         </div>
-                        <form action="/register" method="POST" id="registerForm">
+                        <form action="/" method="POST" id="registerForm">
                             <div class="row">
                                 <div class="col-md-6"><input type="text" name="first_name" placeholder="First Name"
                                                              required autocomplete="off"/></div>
