added body parser and processed input from form

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,14 +21,14 @@
                                                              required autocomplete="off"/></div>
                                 <div class="col-md-6"><input type="text" name="last_name" placeholder="Last Name"
                                                              required autocomplete="off"/></div>
-                                <div class="col-md-6"><input type="email" name="email_address" placeholder="Email"
+                                <div class="col-md-6"><input type="email" name="email" placeholder="Email"
                                                              required autocomplete="off"/></div>
                                 <div class="col-md-6"><input type="text" name="company_name" placeholder="Company Name"
                                                              required autocomplete="off"/></div>
 
                                 <div class="checkbox col-md-6">
                                     <label style="font-size: 1em">
-                                        <input type="checkbox" value="accepted-email" name="accept_email" required>
+                                        <input type="checkbox"  name="receive_email" value="true">
                                         <span class="cr"><i class="cr-icon fa fa-check"></i></span>
                                         Receive Email from ICON
                                     </label>
