--- a/views/guests/index.handlebars
+++ b/views/guests/index.handlebars
@@ -6,9 +6,9 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
+      <th scope="col">Date</th>
+      <th scope="col">First Name</th>
+      <th scope="col">Last Name</th>
       <th scope="col">Company</th>
       <th scope="col">Email</th>
       <th scope="col">Receive Email</th>
@@ -16,8 +16,10 @@
   </thead>
   <tbody>
     {{#each guests}}
-    <tr>
-      <th scope="row">{{date}}</th>
+    <tr {{#if receive_email}}class="table-success"{{/if}}>
+      <th scope="row">{{moment date "ll"}}<br>
+      {{moment date "h:mm:ss a"}}
+      </th>
       <td>{{first_name}}</td>
       <td>{{last_name}}</td>
       <td>{{company_name}}</td>
@@ -25,7 +27,7 @@
       <td>{{receive_email}}</td>
     </tr>
     {{else}}
-<p>No Guests Yet!</p>
+<h3>No Guests Yet!</h3>
 {{/each}}
   </tbody>
 </table>
