--- a/views/guests/index.handlebars
+++ b/views/guests/index.handlebars
@@ -3,7 +3,9 @@
         {{> _msg}}
         {{> _errors}}
         <h1>Guests</h1>
-<table class="table table-hover">
+        {{#if guests}}
+        <p>Sorted by order of registration. Latest at the top.</p>
+        <table class="table table-hover">
   <thead>
     <tr>
       <th scope="col">Date</th>
@@ -15,11 +17,13 @@
     </tr>
   </thead>
   <tbody>
+        {{/if}}
+
     {{#each guests}}
     <tr {{#if receive_email}}class="table-success"{{/if}}>
-      <th scope="row">{{moment date "ll"}}<br>
+      <td>{{moment date "ll"}}<br>
       {{moment date "h:mm:ss a"}}
-      </th>
+      </td>
       <td>{{first_name}}</td>
       <td>{{last_name}}</td>
       <td>{{company_name}}</td>
@@ -27,7 +31,8 @@
       <td>{{receive_email}}</td>
     </tr>
     {{else}}
-<h3>No Guests Yet!</h3>
+<div class="alert alert-warning" role="alert">
+No Guests have been registered yet!</div>
 {{/each}}
   </tbody>
 </table>
