parepared app for deployment

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,7 +26,7 @@
                                 <div class="col-md-6"><input type="text" name="company_name" placeholder="Company Name"
                                                              required autocomplete="off"/></div>
 
-                                <div class="checkbox col-md-6">
+                                <div class="checkbox col-md-12 pt-4">
                                     <label style="font-size: 1em">
                                         <input type="checkbox"  name="receive_email" value="true">
                                         <span class="cr"><i class="cr-icon fa fa-check"></i></span>
