--- a/views/partials/_nav.handlebars
+++ b/views/partials/_nav.handlebars
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
     <div class="container">
-        <a class="navbar-brand" href="/guests">Admin</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -11,11 +10,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/">Front Home</a>
                 </li>
-                <li class="nav-item">
+                {{!-- <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
-                </li>
+                </li> --}}
             </ul>
-            <div class="ul navbar-nav ml-auto">
+            {{!-- <div class="ul navbar-nav ml-auto">
                 {{#if user}}
 
                 <li class="nav-item">
@@ -25,11 +24,8 @@
                 <li class="nav-item">
                     <a href="/admin/login" class="nav-link">Login</a>
                 </li>
-                <li class="nav-item">
-                    <a href="/admin/register" class="nav-link">Register</a>
-                </li>
                 {{/if}}
-            </div>
+            </div> --}}
         </div>
     </div>
 </nav>
