--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="/css/animate.css">
     <link rel="stylesheet" href="/css/particles.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel='icon' href='../favicon.ico' type='image/x-icon' />
+      <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-touch-fullscreen" content="yes">
     <title>ICON Chairty Dinner</title>
 </head>
 
@@ -36,6 +37,21 @@
         <script src="../../js/custom.js"></script>
         <script src="../../js/particles.js"></script>
         <script src="../../js/particles-app.js"></script>
+        <script>
+    document.body.addEventListener('touchmove', function(event) {
+      console.log(event.source);
+      //if (event.source == document.body)
+        event.preventDefault();
+    }, false);
+
+    window.onresize = function() {
+      $(document.body).width(window.innerWidth).height(window.innerHeight);
+    }
+
+    $(function() {
+      window.onresize();
+    });
+  </script>
 </body>
 
 </html>
