--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 body {
-  margin-top: -20px;
+  margin: 0px;
   padding: 0;
   line-height: 1.85em;
   font-family: 'Poppins', sans-serif;
