--- a/public/css/style.css
+++ b/public/css/style.css
@@ -243,9 +243,9 @@ h2 {
 }
 
 .ntHome {
-  position: relative;
+  /* position: relative; */
   width: 100%;
-  height: 150vh;
+  height: 100vh;
   overflow: hidden;
   background-image: url('img/bg.jpg');
   background-size: cover;
