--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,8 +13,8 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
       <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-touch-fullscreen" content="yes">
-        <link rel="apple-touch-icon" href="../../public/img/apple-touch-icon.png">
-        <link rel="apple-touch-startup-image" href="../../public/img/apple-touch-icon.png">
+        <link rel="apple-touch-icon" href="../../img/apple-touch-icon.png">
+        <link rel="apple-touch-startup-image" href="../../img/apple-touch-icon.png">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="ICON Charity">
 
