updated ios splash img

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,16 +14,16 @@
       <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-touch-fullscreen" content="yes">
         <link rel="apple-touch-icon" href="../../img/apple-touch-icon.png">
-        <link rel="apple-touch-startup-image" href="../../img/apple-touch-icon.png">
+        <link rel="apple-touch-startup-image" href="../../img/apple-ipad-splash.png">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="ICON Charity">
 
         
 
 
-  <style>
+  {{!-- <style>
     html, body {margin: 0; padding: 0; overflow: hidden}
-  </style>
+  </style> --}}
     <title>ICON Chairty Dinner</title>
 </head>
 
