--- a/public/css/style.css
+++ b/public/css/style.css
@@ -247,7 +247,7 @@ h2 {
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  background-image: url('img/bg.jpg');
+  background-image: url('../img/bg.jpg');
   background-size: cover;
   background-position: center;
 }
