update splash logo

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
       <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-touch-fullscreen" content="yes">
         <link rel="apple-touch-icon" href="../../img/apple-touch-icon.png">
-        <link rel="apple-touch-startup-image" href="../../img/apple-ipad-splash.png">
+        <link rel="apple-touch-startup-image" href="../../img/logo.jpg">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="ICON Charity">
 
