--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
         <meta name="apple-touch-fullscreen" content="yes">
         <link rel="apple-touch-icon" href="../../img/apple-touch-icon.png">
         <link rel="apple-touch-startup-image" href="../../img/logo.jpg">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="apple-mobile-web-app-title" content="ICON Charity">
 
         
