--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.1, user-scalable=no, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=contain" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
@@ -55,13 +55,7 @@
         event.preventDefault();
     }, false);
 
-    window.onresize = function() {
-      $(document.body).width(window.innerWidth).height(window.innerHeight);
-    }
 
-    $(function() {
-      window.onresize();
-    });
   </script>
 </body>
 
