--- a/public/css/particles.css
+++ b/public/css/particles.css
@@ -1,6 +1,6 @@
 #particles-js {
-  /* width: 100%;
-  height: 100%; */
+  width: 120%;
+  height: 120%;
   background-image: url('../img/bg.jpg');
   background-size: cover;
   /* background-position: 50% 50%; */
