--- a/public/css/style.css
+++ b/public/css/style.css
@@ -245,7 +245,8 @@ h2 {
 .ntHome {
   /* position: relative; */
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  
   overflow: hidden;
   background-image: url('../img/bg.jpg');
   background-size: cover;
