--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,14 +13,14 @@ body {
   -webkit-touch-callout: none;
 }
 
-html {
-  position: fixed;
+body {
+
   overflow: hidden;
 }
 
 body {
   /* margin: 0px; */
-  padding: 0;
+  /* padding: 0; */
   line-height: 1.85em;
   font-family: 'Poppins', sans-serif;
   color: #242732;
