--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -49,19 +49,9 @@
         <script src="../../js/particles.js"></script>
         <script src="../../js/particles-app.js"></script>
         <script>
-    document.body.addEventListener('touchmove', function(event) {
-      console.log(event.source);
-      //if (event.source == document.body)
-        event.preventDefault();
-    }, false);
-
-    window.onresize = function() {
-      $(document.body).width(window.innerWidth).height(window.innerHeight);
-    }
-
-    $(function() {
-      window.onresize();
-    });
+          document.body.addEventListener('touchmove', function(e) { 
+              e.preventDefault(); 
+          });
   </script>
 </body>
 
