--- a/public/css/particles.css
+++ b/public/css/particles.css
@@ -1,10 +1,10 @@
 #particles-js {
-  width: 120%;
+  /* width: 120%;
   height: 120%;
   background-image: url('../img/bg.jpg');
   background-size: cover;
   /* background-position: 50% 50%; */
-  background-repeat: no-repeat;
-  position: absolute;
+  /* background-repeat: no-repeat;
+  position: absolute; */
   z-index: 2;
 }
