--- a/public/css/style.css
+++ b/public/css/style.css
@@ -243,13 +243,13 @@ h2 {
 
 .ntHome {
   /* position: relative; */
-  width: 100%;
+  width: 120% !important;
   height: 120%;
   
-  overflow: hidden;
+  /* overflow: hidden; */
   background-image: url('../img/bg.jpg');
-  background-size: cover;
-  background-position: center;
+  /* background-size: cover;
+  background-position: center; */
 }
 
 /*Main Title*/
