--- a/public/css/style.css
+++ b/public/css/style.css
@@ -244,7 +244,7 @@ h2 {
 .ntHome {
   /* position: relative; */
   width: 100%;
- 
+  min-height: 2000px;
   overflow: hidden;
   background-image: url('../img/bg.jpg');
   background-size: cover;
