--- a/public/css/style.css
+++ b/public/css/style.css
@@ -317,7 +317,7 @@ h2 {
 
 /*ntRegisterForm*/
 .ntRegisterForm {
-  padding-bottom: 80px;
+  /* padding-bottom: 80px; */
   background: #ffffff;
 }
 
