--- a/public/css/style.css
+++ b/public/css/style.css
@@ -317,7 +317,7 @@ h2 {
 
 /*ntRegisterForm*/
 .ntRegisterForm {
-  /* padding-bottom: 80px; */
+  padding-bottom: 80px;
   background: #ffffff;
 }
 
@@ -548,48 +548,7 @@ span.error:after {
       
   }
 
-  /* Statistic */
-  .ntCounter_type span.ntCounterTitle {
-      margin-bottom: 80px;
-  }
-
-  .ntCounter_type .col-md-3:last-child span.ntCounterTitle {
-      margin-bottom: 0px;
-  }
-
-  .ntCounter_type i {
-      left: 25%;
-  }
-
-  /* speaker */
-  .ntSubTitle {
-      margin-bottom: 36px;
-  }
-
-  .ntOurSpeakersItem .overlay {
-      padding-top: 20%;
-  }
-
-  /* conference schedule */
-  .ntTabContent .ntEvent.extend .ntCaption .ntImage {
-      float: initial;
-      margin: 0 auto;
-      margin-bottom: 20px;
-  }
-
-  .ntTabContent .ntEvent.extend .ntCaptionText {
-      text-align: center;
-  }
-
-  /* subscribe */
-  .ntSubscribe .form {
-      width: 80%;
-  }
-
-  .ntSubscribe:after,
-  .ntSubscribe:before {
-      width: 10%;
-  }
+  
 
 }
 
@@ -600,60 +559,7 @@ span.error:after {
       font-size: 40px;
   }
 
-  /* community */
-  .ntCommunity ul.ntSocialIcons {
-      width: 83%;
-  }
-
-  .ntCommunity ul.ntSocialIcons a {
-      width: 54px;
-      height: 54px;
-      font-size: 22px;
-      line-height: 54px;
-      margin-bottom: 10px;
-  }
-
-  .ntOurSpeakersItem .overlay {
-      padding-top: 40%;
-  }
-
-  /* subscribe */
-  .ntSubscribe .form {
-      width: 100%;
-      padding: 0 12%;
-  }
-
-  .ntSubscribe,
-  .ntSubscribeLeft,
-  .ntSubscribeRight,
-  .ntSubscribe:before,
-  .ntSubscribe:after {
-      display: none
-  }
-
-  ul.ntScheduleTab li .ntBtnDownloadSchedule {
-      display: none;
-  }
-
-  ul.ntScheduleTab {
-      width: 280px;
-      margin: 0 auto;
-  }
-
-  .ntSponsors .ntSponsorList img {
-      width: inherit;
-  }
-
-  /*footer*/
-  footer .footnav,
-  footer p {
-      margin-bottom: 25px;
-      padding-bottom: 0;
-  }
-
-  footer .foot-logo {
-      margin-top: 0px;
-  }
+ 
 }
 
 /*Mobile*/
