--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,7 +88,7 @@ h2 {
 
 /* Preloader */
 .preloader {
-  background-color: #99679a;
+  background-image: url('../img/apple-ipad-splash.png');
   width: 100%;
   height: 100%;
   position: fixed;
