--- a/public/css/particles.css
+++ b/public/css/particles.css
@@ -1,7 +1,7 @@
 #particles-js {
-  /* width: 120%;
+ width: 120%;
   height: 120%;
-  background-image: url('../img/bg.jpg');
+/*  background-image: url('../img/bg.jpg');
   background-size: cover;
   /* background-position: 50% 50%; */
   /* background-repeat: no-repeat;
