--- a/views/partials/_msg.handlebars
+++ b/views/partials/_msg.handlebars
@@ -1,5 +1,18 @@
 {{#if success_msg}}
-<div class="alert alert-success">{{success_msg}}</div>
+<div class="modal fade" id="overlay">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+                  <h4 class="modal-title">Thank You</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      </div>
+      <div class="modal-body">
+        <p>{{success_msg}}</p>
+      </div>
+    </div>
+  </div>
+</div>
+
 {{/if}}
 
 {{#if error_msg}}
