added success animation

--- a/views/partials/_msg.handlebars
+++ b/views/partials/_msg.handlebars
@@ -7,6 +7,8 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       </div>
       <div class="modal-body">
+          <img src="/img/success.gif" alt="Smiley face" height="200" width="300">
+
         <p>{{success_msg}}</p>
       </div>
     </div>
