--- a/views/guests/index.handlebars
+++ b/views/guests/index.handlebars
@@ -1,10 +1,8 @@
     {{> _nav}}
-    <div class="container">
+    <div class="container table-responsive-md">
         {{> _msg}}
         {{> _errors}}
-        <h1>Guests</h1>
         {{#if guests}}
-        <p>Sorted by order of registration. Latest at the top.</p>
         <table class="table table-hover">
   <thead>
     <tr>
