--- a/views/partials/_nav.handlebars
+++ b/views/partials/_nav.handlebars
@@ -1,31 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-3">
+<nav class="navbar sticky-top navbar-light bg-light">
     <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Front Home</a>
-                </li>
-                {{!-- <li class="nav-item">
-                    <a class="nav-link" href="/about">About</a>
-                </li> --}}
-            </ul>
-            {{!-- <div class="ul navbar-nav ml-auto">
-                {{#if user}}
-
-                <li class="nav-item">
-                    <a href="/admin/logout" class="nav-link">Log Out</a>
-                </li>
-                {{else}}
-                <li class="nav-item">
-                    <a href="/admin/login" class="nav-link">Login</a>
-                </li>
-                {{/if}}
-            </div> --}}
-        </div>
-    </div>
+<div class="h2">Guests</div>  </div>
 </nav>
