--- a/views/partials/_nav.handlebars
+++ b/views/partials/_nav.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-light bg-light">
+<nav class="navbar sticky-top">
     <div class="container">
 <div class="h2">Guests</div>  </div>
 </nav>
