update email confirmation text

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,7 +31,7 @@
                                     <label style="font-size: 1em">
                                         <input type="checkbox"  name="receive_email" value="true">
                                         <span class="cr"><i class="cr-icon fa fa-check"></i></span>
-                                        Receive Email from ICON
+                                        I agree to receive email from ICON
                                     </label>
                                 </div>
 
