updated font and text

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,10 +11,8 @@
                        
                         <img src="img/logo.jpg" class="img-thumbnail" alt="...">
                         <h6>WELCOME TO THE</h6>
-                        <h2>DINNER PARTY</h2>
-                        <div class="ntSubTitle block-center">JOIN US IN RAISING AWARENESS AND FUNDS TO BENEFIT
-                            <br> GENEVA CENTRE FOR AUTISM, SUPPORTING THE INCLUSION OF <br> ALL INDIVIDUALS WITH ASD IN
-                            OUR COMMUNITIES.
+                        <h2>DINNER <br> PARTY</h2>
+                        <div class="ntSubTitle block-center">ENJOY AN EVENING OF FINE DINING AND INSPIRING SPEAKERS WHO WILL SHARE THEIR STORIES OF RESILIENCE. HEAR FROM VOICES OF THOSE WHO HAVE FACED ADVERSITY, OVERCOME OBSTACLES AND RELISHED IN SUCCESS.
                         </div>
                         <form action="/" method="POST" id="registerForm">
                             <div class="row">
