--- a/public/css/style.css
+++ b/public/css/style.css
@@ -188,7 +188,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Quattrocento', serif;
   font-weight: 400;
 }
 
@@ -228,10 +228,10 @@ p {
 }
 
 h2 {
-  font-size: 40px;
-  line-height: 42px;
+  font-size: 88px;
+  line-height: 70px;
   text-align: center;
-  font-weight: 900;
+  font-weight: 100;
 }
 
 .overflow {
@@ -599,7 +599,7 @@ span.error:after {
   .mainTitle {
       width: 680px;
       /*bottom: 5%;*/
-      top: 5%;
+      top: 2%;
   }
 
 }
