updated font and subtext content

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -477,6 +477,7 @@ h2 {
 .ntRegisterForm .ntSubTitle {
   text-align: center;
   margin-bottom: 35px;
+  font-family: 'Quattrocento', serif;
 }
 
 .ntRegisterForm .ntSubmit {
