--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
                         <img src="img/logo.jpg" class="img-thumbnail" alt="...">
                         <h6>WELCOME TO THE</h6>
                         <h2>DINNER <br> PARTY</h2>
-                        <div class="ntSubTitle block-center">ENJOY AN EVENING OF FINE DINING AND INSPIRING SPEAKERS WHO WILL SHARE THEIR STORIES OF RESILIENCE. HEAR FROM VOICES OF THOSE WHO HAVE FACED ADVERSITY, OVERCOME OBSTACLES AND RELISHED IN SUCCESS.
+                        <div class="ntSubTitle block-center">ENJOY AN EVENING OF FINE DINING AND INSPIRING SPEAKERS<br> WHO WILL SHARE THEIR STORIES OF RESILIENCE.<br> HEAR FROM VOICES OF THOSE WHO HAVE FACED ADVERSITY, OVERCOME OBSTACLES AND RELISHED IN SUCCESS.
                         </div>
                         <form action="/" method="POST" id="registerForm">
                             <div class="row">
