added ipad splash image

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,8 +16,8 @@
       <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-touch-fullscreen" content="yes">
         <link rel="apple-touch-icon" href="../../img/apple-touch-icon.png">
-        <link rel="apple-touch-startup-image" href="../../img/logo.jpg">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<!-- iPad Mini, Air (1536px x 2048px) --> 
+<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" href="img/apple-launch-1536x2048.png">        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="ICON Charity">
 
         
