--- a/views/partials/_nav.handlebars
+++ b/views/partials/_nav.handlebars
@@ -1,4 +1,6 @@
 <nav class="navbar sticky-top">
-    <div class="container">
-<div class="h2">Guests</div>  </div>
+
+        {{#if guests}}
+        <div class="h2">{{guests.length}} Guests</div>  
+        {{/if}}
 </nav>
