updated app icon

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,25 @@
+        <link rel="apple-touch-icon" href="../../img/apple-touch-icon.png">
+<!-- iPad Mini, Air (1536px x 2048px) --> 
+<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" href="img/apple-launch-1536x2048.png">        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-title" content="ICON Charity">
+
+        
+
+
+  {{!-- <style>
+    html, body {margin: 0; padding: 0; overflow: hidden}
+  </style> --}}
+    <title>ICON Chairty Dinner</title>
+</head>
+
+<body>
+<!-- preloader -->
+<div class="preloader">
+    <div class="loader"></div>
+</div>
+<!-- preloader ends!-->
+<!-- Home section -->
+ {{> _msg}}
 <div class="ntHome" id="home">
     <!-- particles -->
     <div id="particles-js"></div>
